# talvos

./: .appveyor.yml  .clang-format  .gitignore  .travis.yml  AUTHORS  CMakeLists.txt  LICENSE  README.md  version.h.in
docs/: CMakeLists.txt  Doxyfile.in
docs/sphinx/: building.rst  conf.py  conf.py.in  developers.rst  index.rst  plugins.rst  talvos-cmd.rst  usage.rst
include/talvos/: Block.h  Commands.h  ComputePipeline.h  DescriptorSet.h  Device.h  Dim3.h  DispatchCommand.h  EntryPoint.h  FormatUtils.h  Function.h  GraphicsPipeline.h  Image.h  Instruction.h  Interpreter.h  Invocation.h  Memory.h  Module.h  Object.h  Pipeline.h  PipelineContext.h  PipelineStage.h  Plugin.h  Queue.h  RenderPass.h  Result.h  Type.h  Variable.h  Workgroup.h
lib/: CMakeLists.txt
lib/talvos/: Block.cpp  CMakeLists.txt  CommandInvocation.cpp  CommandInvocation.h  Commands.cpp  ComputePipeline.cpp  Device.cpp  Dim3.cpp  DispatchCommand.cpp  FormatUtils.cpp  Function.cpp  GraphicsPipeline.cpp  Image.cpp  Instruction.cpp  Interpreter.cpp  Invocation.cpp  Memory.cpp  Module.cpp  Object.cpp  Pipeline.cpp  PipelineContext.cpp  PipelineExecutor.cpp  PipelineExecutor.h  PipelineStage.cpp  Queue.cpp  RenderPass.cpp  ShaderExecution.cpp  ShaderExecution.h  Type.cpp  Utils.cpp  Utils.h  Variable.cpp  Workgroup.cpp  config.h.in
lib/vulkan/: CMakeLists.txt  clears.cpp  commandbuffers.cpp  copies.cpp  descriptorsets.cpp  device.cpp  dispatch.cpp  drawing.cpp  exports.def  extensions.cpp  features.cpp  fragmentoperations.cpp  framebuffer.cpp  fxvertex.cpp  instance.cpp  memory.cpp  pipelines.cpp  queries.cpp  rasterization.cpp  renderpass.cpp  resources.cpp  runtime.h  samplers.cpp  shaders.cpp  sparseresources.cpp  synchronization.cpp
test/: CMakeLists.txt  run-test.py
test/errors/: device-load-invalid.tcf  device-store-invalid.tcf  invocation-load-invalid.spvasm  invocation-load-invalid.tcf  invocation-store-invalid.spvasm  invocation-store-invalid.tcf  load-invalid.tcf  missing-ds-entry.tcf  store-invalid.tcf  workgroup-load-invalid.spvasm  workgroup-load-invalid.tcf  workgroup-store-invalid.spvasm  workgroup-store-invalid.tcf
test/interactive/: CMakeLists.txt  break-on-error.stdin  break-on-error.tcf  break.stdin  break.tcf  print.stdin  print.tcf  step.stdin  step.tcf  switch.stdin  switch.tcf
test/misc/: descriptor-array-runtime-array.spvasm  descriptor-array-runtime-array.tcf  jacobi.spvasm  jacobi.tcf  multiple-entry-points.spvasm  multiple-entry-points.tcf  nbody.spvasm  nbody.tcf  reduce.spvasm  reduce.tcf  ssbo-direct-load-store.spvasm  ssbo-direct-load-store.tcf  vecadd.spv  vecadd.spvasm  vecadd.tcf  vecadd_binary.tcf
test/plugins/: CMakeLists.txt  callbacks.cpp  callbacks.tcf  missing-create.cpp  missing-create.tcf  missing-library.tcf  plugin-functions.def
test/runtime/: CMakeLists.txt  async-queue.cpp  common.cpp  common.h  vecadd.c  vecadd.cpp
test/spirv/: bitcast.spvasm  bitcast.tcf  composite-extract.spvasm  composite-extract.tcf  constant-composite.spvasm  constant-composite.tcf  function-call.spvasm  function-call.tcf  group-builtins-static.spvasm  group-builtins.tcf  phi-swap.spvasm  phi-swap.tcf  simple-branch.spvasm  simple-branch.tcf  simple-loop.spvasm  simple-loop.tcf  spec-constant-workgroupsize.spvasm  spec-constant-workgroupsize.tcf  spec-constants.spvasm  spec-constants.tcf  struct-offset.spvasm  struct-offset.tcf  test-bitwise-instructions.spvasm  test-bitwise-instructions.tcf  test-fp-arithmetic.spvasm  test-fp-arithmetic.tcf  test-fp-comparisons.spvasm  test-fp-comparisons.tcf  test-integer-arithmetic.spvasm  test-integer-arithmetic.tcf  test-integer-comparisons.spvasm  test-integer-comparisons.tcf  test-logical-instructions.spvasm  test-logical-instructions.tcf  test-op-helpers.spvasm  test-op-helpers.tcf  test_OpIAdd.spvasm  test_OpIAdd.tcf
test/talvos-cmd/: CMakeLists.txt  binfile-too-short.tcf  binfile.tcf  dispatch-without-module.tcf  duplicate-allocation-name.tcf  endloop-without-loop.tcf  invalid-allocation-type.tcf  invalid-resource-name.tcf  invalid-spec-id.tcf  invalid-vector-suffix.tcf  loop-count-zero.tcf  missing-binfile.tcf  parse-failure.tcf  unexpected-eof.tcf  unterminated-loop.tcf  wrong-specialize-size.tcf
tools/: CMakeLists.txt
tools/talvos-cmd/: CMakeLists.txt  CommandFile.cpp  CommandFile.h  CommandInvocation.cpp  CommandInvocation.h  talvos-cmd.cpp
